[build-system]
requires = ["scikit-build-core>=0.10", "pybind11"]
build-backend = "scikit_build_core.build"


[project]
name = "signal_analyzer"
version = "0.0.1"
description="A minimal example package (with pybind11)"
#readme = "README.md"
authors = [
  { name = "My Name", email = "me@email.com" },
]
requires-python = ">=3.9"

[tool.scikit-build]
wheel.expand-macos-universal-tags = true
minimum-version = "build-system.requires"

