[build-system]
requires = ["scikit-build-core>=0.10", "pybind11"]
build-backend = "scikit_build_core.build"


[project]
name = "signal_analyzer"
version = "0.0.1"
description="Signal analyzer (with pybind11)"
#readme = "README.md"
authors = [
  { name = "Daniel Chrzanowski 203381"},
  { name = "Krzysztof Chojka 203183"}
]
requires-python = ">=3.9"

[tool.scikit-build]
wheel.expand-macos-universal-tags = true
minimum-version = "build-system.requires"

